<resources>
    <string name="app_name">Train T169</string>
    <string name="book_a_seat">Book a Seat</string>
    <string name="Check_Schedule">Check Schedule</string>
    <string name="time_is_money_we_save_you_both">Time is money. We save you both.</string>
    <string name="train_t169">Train t169</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="destination">Destination :</string>
    <string name="from">From :</string>
    <string name="book_a_seat_x2">Book a seat</string>
    <string name="nm">Name :</string>
    <string name="logo">LOGO</string>
    <string name="col1">Station name</string>
    <string name="col2">Arrival time</string>
    <string name="col3">Departure time</string>
    <string name="col4">Duration (min)</string>
    <string name="col5">Distance (km)</string>
    <string name="col6">Fare ($)</string>
    <string name="schedule">Schedule</string>
    <string name="row1">ShangHaiNan (上海南)</string>
    <string name="row2">Departure Station</string>
    <string name="row3">10:50 AM</string>
    <string name="row4">0m</string>
    <string name="row5">0</string>
    <string name="row6">US$0</string>
    <string name="row7">JiaXing (嘉兴)</string>
    <string name="row8">11:32 AM</string>
    <string name="row9">11:35 AM</string>
    <string name="row10">42</string>
    <string name="row11">80</string>
    <string name="row12">US$2</string>
    <string name="row13">HaiNing (海宁)</string>
    <string name="row14">11:55 AM</string>
    <string name="row15">11:58 AM</string>
    <string name="row16">1h5m</string>
    <string name="row17">108</string>
    <string name="row18">US$2</string>
    <string name="row19">HangZhouDong (杭州东)</string>
    <string name="row20">12:40 PM</string>
    <string name="row21">12:46 PM</string>
    <string name="row22">1h50m</string>
    <string name="row23">167</string>
    <string name="row24">US$3</string>
    <string name="row25">YiWu (义乌)</string>
    <string name="row26">13:52 PM</string>
    <string name="row27">13:55 PM</string>
    <string name="row28">3h2m</string>
    <string name="row29">312</string>
    <string name="row30">US$7</string>
    <string name="row31">JinHua (金华)</string>
    <string name="row32">14:30 PM</string>
    <string name="row33">14:36 PM</string>
    <string name="row34">3h40m</string>
    <string name="row35">360</string>
    <string name="row36">US$7</string>
    <string name="row37">QuZhou (衢州)</string>
    <string name="row38">15:25 PM</string>
    <string name="row39">15:28 PM</string>
    <string name="row40">4h35m</string>
    <string name="row41">446</string>
    <string name="row42">US$9</string>
    <string name="todo">TODO</string>
    <string name="row43">ShangRao (上饶)</string>
    <string name="row44">16:39 PM</string>
    <string name="row45">16:45 PM</string>
    <string name="row46">5h49m</string>
    <string name="row47">557</string>
    <string name="row48">US$11</string>
    <string name="row49">YingTan (鹰潭)</string>
    <string name="row50">17:46 PM</string>
    <string name="row51">17:52 PM</string>
    <string name="row52">6h56m</string>
    <string name="row53">673</string>
    <string name="row54">US$13</string>
    <string name="row55"></string>


</resources>