<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#E54D4D"
        android:onClick="submitBooking"
        android:text="@string/book_a_seat"
        android:topLeftRadius="30dp"
        android:topRightRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#E54D4D"
        android:bottomLeftRadius="100dp"
        android:bottomRightRadius="100dp"
        android:text="@string/Check_Schedule"
        android:onClick="checkSchedule"
        android:topLeftRadius="100dp"
        android:topRightRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="66dp"
        android:fontFamily="sans-serif"
        android:text="@string/train_t169"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="322dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/time_is_money_we_save_you_both"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="221dp"
        android:layout_height="216dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/train"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>